<resources>
    <string name="app_name">车头条</string>
    <string name="btn_lead_enter">点击进入</string>
    <string name="time_format_minute">%d分钟前</string>
    <string name="time_format_hour">%d小时前</string>
    <string name="time_format_just">刚刚</string>
    <!--首页-->
    <string name="news">资讯</string>
    <string name="praise">口碑</string>
    <string name="work">作业</string>
    <string name="today">今日精选</string>
    <string name="subject">专题</string>
    <string name="hydrology">甩干水文</string>
    <string name="media">自媒体</string>
    <string name="head">头条</string>
    <string name="discover">发现</string>
    <string name="community">社区</string>
    <string name="profile">我的</string>
    <string name="today_enter">进入专题  ></string>

    <!-- 个人详情 -->
    <string name="activity_profile_detail_title">个人详情</string>
    <string name="activity_profile_detail_label_avatar">头像</string>
    <string name="activity_profile_detail_label_tag">关注车型</string>
    <string name="activity_profile_detail_label_certify">成为认证会员</string>
    <string name="activity_profile_detail_label_phone">手机号码</string>
    <string name="activity_profile_detail_label_nick_name">昵称</string>
    <string name="activity_profile_detail_label_real_name">真实姓名</string>
    <string name="activity_profile_detail_label_introduction">签名</string>
    <string name="activity_profile_detail_label_gender">性别</string>
    <string name="activity_profile_detail_label_age">爱车</string>
    <string name="activity_profile_detail_label_city">所在城市</string>
    <string name="activity_profile_detail_label_birthplace">出生地</string>
    <string name="activity_profile_detail_label_profession">职业</string>
    <string name="activity_profile_detail_label_education">学历</string>
    <string name="activity_profile_detail_label_account_bind">账号绑定</string>
    <string name="activity_profile_detail_value_not_certify">去认证</string>
    <string name="activity_profile_detail_value_not_set">未设置</string>
    <string name="activity_profile_detail_value_not_bind">去绑定</string>
    <string name="activity_profile_detail_add_tag">+\u0020贴标签</string>

    <string name="activity_settings_account_safe">账号安全等级</string>
    <string name="activity_settings_account_settings">去设置</string>
    <string name="activity_settings_account_set">请设置以下项目保护账号</string>
    <string name="activity_settings_account_phone">手机号码激活</string>
    <string name="activity_settings_account_psw">手机号登录密码</string>
    <string name="activity_settings_account_pay_psw">提现密码</string>
    <string name="activity_settings_account_set_psw">修改手机号登录密码</string>
    <string name="activity_settings_account_set_pay_psw">忘记密码了？找回</string>
    <string name="activity_settings_account_phone_set">+86</string>
    <string name="activity_settings_account_phone_hint">你的常用手机号码</string>
    <string name="activity_settings_account_edit">验证码</string>
    <string name="activity_settings_account_edit_hint">请填写手机收到的验证码</string>
    <string name="activity_settings_account_no_activation">您还没有激活手机号码，请激活</string>
    <string name="activity_settings_account_activation">激活</string>
    <string name="activity_settings_account">修改号码</string>
    <string name="activity_settings_account_revise">修改成功</string>
    <string name="activity_settings_account_set_password">修改密码</string>
    <string name="activity_settings_account_pay">设置提现密码</string>
    <string name="activity_settings_account_pay_new">修改提现密码</string>
    <!--我的-->
    <string name="fragment_profile_btn_login">点击登录</string>
    <string name="fragment_profile_score">积分: </string>
    <string name="fragment_profile_message">消息</string>
    <string name="fragment_profile_zine">连续签到</string>
    <string name="fragment_profile_collect">收藏夹</string>
    <string name="fragment_profile_comment">我的评论</string>
    <string name="fragment_profile_my_activity">我报名的活动</string>
    <string name="fragment_profile_invite">邀请好友</string>
    <string name="fragment_profile_setting">设置</string>
    <!-- 昵称设置 -->
    <string name="activity_nick_name_title">昵称</string>
    <string name="activity_my_love_car_title">爱车</string>
    <string name="activity_real_name_name_title">真实姓名</string>
    <string name="activity_nick_name_title_bar_confirm">确认</string>
    <!-- 个人简介 -->
    <string name="activity_introduction_title">个人简介</string>
    <string name="activity_introduction_hint">这个人很懒,什么也没有留下</string>
    <!-- 贴标签 -->
    <string name="activity_add_tags_title">贴标签</string>
    <string name="activity_add_tags_btn_add">添加</string>
    <string name="activity_add_tags_input_hint">请填写标签</string>
    <!-- Login -->
    <string name="login_sub_title_first">看好看的广告</string>
    <string name="login_sub_title_second">领能提现的钱</string>
    <string name="login_phone_input_hint">手机号码</string>
    <string name="login_password_input_hint">登录密码</string>
    <string name="login_verify_code_input_hint">获取验证码</string>
    <string name="btn_login">登\u0020录</string>
    <string name="btn_login_with_verify_code">使用验证码登录</string>
    <string name="btn_login_with_password">使用密码登录</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="btn_register_prefix">您还没有账号?点这里</string>
    <string name="btn_register">快速注册</string>
    <string name="btn_get_verify_code_count_down_default">获\u0020取</string>
    <string name="login_way_sub_title">会员登录</string>
    <string name="login_way_web_chat">微信</string>
    <string name="login_way_phone">手机</string>
    <string name="login_way_qq">QQ</string>
    <string name="login_way_other_register">会员注册</string>
    <string name="login_way_other_sina">微博</string>
    <string name="login_way_other">或许还可以选择其它方式</string>
    <string name="login_error">用户名或者密码错误</string>
    <string name="login_input_phone_error">请输入有效的手机号码</string>
    <string name="login_input_password_error">密码输入有误</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <!-- Register -->
    <string name="register_phone_input_hint">常用手机号码</string>
    <string name="register_verify_code_input_hint">请填写手机收到的验证码</string>
    <string name="register_verify_code_label">验证码</string>
    <string name="register_btn_get_verify_code">获\u0020取</string>
    <string name="register_btn">注册</string>
    <string name="register_licence_info">点击上面的"注册"按钮,即表示您同意《淘贝软件许可及服务协议》</string>
    <string name="register_phone_invalid">请输入合法手机号</string>
    <!--评论-->
    <string name="reply">回复</string>
    <string name="delete">删除</string>
    <!-- Password -->
    <string name="password_label">密码</string>
    <string name="password_confirm_label">确认密码</string>
    <string name="password_input_hint">输入由6~12位数字、字母或组合的密码</string>
    <string name="password_confirm_input_hint">确认密码须与原密码保持一致</string>
    <string name="btn_password_confirm">确定</string>
    <string name="btn_password_old">旧密码</string>
    <string name="btn_password_old_hint">输入当前登录密码</string>
    <string name="btn_password_new">新密码</string>
    <string name="btn_password_new_confirm">确认新密码</string>
    <!--设置-->
    <string name="setting_clear">清理缓存</string>
    <string name="setting_push">推送通知</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_agreement">使用协议</string>
    <string name="setting_cleared">清理</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_detail_title">详情</string>
    <string name="app_loading_more">上拉更多</string>
</resources>
