<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher"
    android:padding="12dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="28dp"
        android:src="@mipmap/ic_launcher"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        />



    <EditText
        android:id="@+id/phone_input"
        android:layout_width="271.5dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_login_input"
        android:drawableLeft="@mipmap/icon_login_input_phone"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/login_phone_input_hint"
        android:inputType="number"
        android:maxLength="@integer/max_phone_length"
        android:minHeight="55.5dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:singleLine="true"
        android:textColorHint="@color/font_color_hint"
        style="@style/Widget.App.TextView.Medium"
        android:alpha="0.8"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="271.5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login_input"
        android:drawableLeft="@mipmap/icon_login_input_password"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:hint="@string/login_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="@integer/max_password_length"
        android:minHeight="55.5dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:singleLine="true"
        android:textColorHint="@color/font_color_hint"
        style="@style/Widget.App.TextView.Medium"
        android:alpha="0.8"
        />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@mipmap/bg_btn_login"
        android:gravity="center"
        android:text="@string/btn_login"
        style="@style/Widget.App.TextView.XXLarge.Primary"
        />

    <TextView
        android:id="@+id/btn_login_with_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_login_with_verify_code"
        style="@style/Widget.App.TextView.Medium.Yellow"
        />

  </LinearLayout>

  <TextView
      android:id="@+id/btn_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:text="@string/btn_register"
      style="@style/Widget.App.TextView.Medium.Secondary"
      />

  <TextView
      android:id="@+id/btn_forget_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@id/btn_register"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="13dp"
      android:text="@string/btn_forget_password"
      style="@style/Widget.App.TextView.Medium.Secondary"
      />

</RelativeLayout>