<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:id="@+id/collect"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:text="@string/setting_clear"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />


    <TextView
        android:id="@+id/introduction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/action_settings"
        tools:text="@string/activity_profile_detail_value_not_set"
        />

  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="18dp"
      android:layout_marginRight="19dp"
      android:background="@color/bg_color_divider"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/font_color_white"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/setting_push"
        android:textColor="@color/font_color_primary"
        android:textSize="@dimen/font_size_large"
        />
    <ToggleButton
        android:id="@+id/mTogBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:button="@drawable/toggle_btn"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn=""
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="18dp"
      android:layout_marginRight="19dp"
      android:background="@color/bg_color_divider"
      />
  <RelativeLayout

      style="@style/ProfileMenuContainer"
      >
    <TextView


        android:text="@string/setting_update"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/action_settings"
        />

  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="18dp"
      android:layout_marginRight="19dp"
      android:background="@color/bg_color_divider"
      />
  <RelativeLayout

      style="@style/ProfileMenuContainer"
      >
    <TextView


        android:text="@string/setting_about"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/tiaozhuan"
        />

  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="18dp"
      android:layout_marginRight="19dp"
      android:background="@color/bg_color_divider"
      />
  <RelativeLayout

      style="@style/ProfileMenuContainer"
      >
    <TextView


        android:text="@string/setting_agreement"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/tiaozhuan"
        />

  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginLeft="18dp"
      android:layout_marginRight="19dp"
      android:background="@color/bg_color_divider"
      />

</LinearLayout>