<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_color_white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#d9d9d9" />

        <RelativeLayout
            android:id="@+id/avatar_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_avatar" />

            <ImageView
                android:id="@+id/avatar_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_arrow" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/user_avatar_display"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/avatar_arrow"
                app:placeholderImage="@mipmap/src_avatar_default_drawer"
                app:roundAsCircle="true"
                app:roundingBorderColor="#c3c3c3"
                app:roundingBorderWidth="1dp"
                tools:src="@mipmap/src_avatar_default_drawer" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <RelativeLayout
            android:id="@+id/nick_name_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_nick_name" />

            <TextView
                android:id="@+id/nick_name_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <RelativeLayout
            android:id="@+id/real_name_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_real_name" />

            <TextView
                android:id="@+id/real_name_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />


        <RelativeLayout
            android:id="@+id/gender_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_gender" />

            <TextView
                android:id="@+id/gender_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />


        <RelativeLayout
            android:id="@+id/age_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="年龄" />

            <TextView
                android:id="@+id/age_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <RelativeLayout
            android:id="@+id/phone_setting"
            style="@style/ProfileMenuContainer.Detail"
            android:layout_marginTop="6dp">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_phone" />

            <TextView
                android:id="@+id/phone_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <RelativeLayout
            android:id="@+id/my_car_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_age" />

            <TextView
                android:id="@+id/my_car_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <LinearLayout
            android:id="@+id/tags_setting"
            style="@style/ProfileMenuContainer.Detail"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_profile_detail_label_tag" />

            <org.apmem.tools.layouts.FlowLayout
                android:id="@+id/tags_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"

                />

            <ImageView
                android:id="@+id/tags_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_arrow" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />

        <RelativeLayout
            android:id="@+id/introduction_setting"
            style="@style/ProfileMenuContainer.Detail">

            <TextView
                style="@style/Widget.App.TextView.Medium.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/activity_profile_detail_label_introduction" />

            <TextView
                android:id="@+id/introduction_value"
                style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
                tools:text="@string/activity_profile_detail_value_not_set" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_color_divider" />
    </LinearLayout>
</ScrollView>