<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/lunbo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.8"

        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/today_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jinrijingxuan" />

            <TextView
                style="@style/Widget.App.TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/today" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/tab_layout_color" />

        <LinearLayout
            android:id="@+id/btn_red_bag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zhuanti" />

            <TextView
                android:id="@+id/profit"
                style="@style/Widget.App.TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subject" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/tab_layout_color" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/shuaiganshuiwen" />

            <TextView
                style="@style/Widget.App.TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hydrology" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/tab_layout_color" />

        <LinearLayout
            android:id="@+id/self_media_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zimeiti" />

            <TextView
                style="@style/Widget.App.TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/media" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
